Add example scan reports as templates
Generated from deep scan of Countries GraphQL API:
- 8 findings (2 HIGH, 3 MEDIUM, 3 INFO)
- JSON report showing data structure
- HTML report demonstrating visual output

Reports show real vulnerabilities found:
- Unauthenticated introspection access
- Field aliasing abuse
- No query complexity limits
- Missing authentication

These serve as templates and examples for users.

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,10 @@ Thumbs.db
 results/
 reports/
 
+# Example reports should be tracked
+!examples/*.json
+!examples/*.html
+
 # Local config
 config/local.yaml
 *.local.yaml
